--- a/KicioroTimer/Pages/SubjectModalComponent.razor
+++ b/KicioroTimer/Pages/SubjectModalComponent.razor
@@ -15,6 +15,15 @@
     <div class="col-6 col-md-6">@subject.TimeForSubject.Subtract(subject.TimeUsed).TotalHours</div>
 </div>
 
+<button class="btn btn-primary" @onclick="DeleteOnClick">Delete</button>
+
 @code {
     [Parameter] public Weather.Subject subject { get; set; }
+    [Parameter] public Weather.SubjectAction Delete { get; set; }
+
+
+    private async Task DeleteOnClick(EventArgs args)
+    {
+        await Delete(subject);
+    }
 }
