--- a/KicioroTimer/Pages/LearnSubjectModalComponent.razor
+++ b/KicioroTimer/Pages/LearnSubjectModalComponent.razor
@@ -1,4 +1,9 @@
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
+@using BlazorWorker.BackgroundServiceFactory
+@using BlazorWorker.Core
+@using BlazorWorker.Core.CoreInstanceService
+@using KicioroTimer.Logic
+@inject IWorkerFactory workerFactory
 
 <div class="row">
     <div class="col-6 col-md-6 text-end">Umiejanie:</div>
@@ -21,14 +26,35 @@
     private int seconds = 0;
     private bool learning = true;
     private string toogleButtonText = "Stop";
+    
+    private IWorker? worker;
+    private int counter = 0;
+    private bool isRunning = false;
+
+    private async Task StartCounter()
+    {
+       
+    }
 
     protected override void OnInitialized()
     {
+        
         ProceedLearning();
         base.OnInitialized();
     }
 
-    private async Task ProceedLearning(){
+
+    private async Task StartLearning()
+    {
+        
+    }
+
+    public class LearningeService
+    {
+       
+    }
+    
+    public async Task ProceedLearning(){
 
         while(learning){
             await Task.Delay(1000);
