--- a/KicioroTimer/Pages/Subjects.razor
+++ b/KicioroTimer/Pages/Subjects.razor
@@ -9,7 +9,7 @@
 
 <h1>Lista przedmiotów</h1>
 
-<Modal @ref="modal" IsScrollable="true"/>
+<Modal @ref="modal" IsScrollable="true" Fullscreen="ModalFullscreen.Always"/>
 <button class="btn btn-primary" @onclick="ShowAddSubjectModalComponent">Dodaj</button>
 @if (subjects == null)
 {
