--- a/KicioroTimer/Layout/NavMenu.razor
+++ b/KicioroTimer/Layout/NavMenu.razor
@@ -10,8 +10,11 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="subjects">
+            <NavLink class="nav-link" href="/">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Przedmioty
+            </NavLink>
+            <NavLink class="nav-link" href="questions">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Example
             </NavLink>
         </div>
     </nav>
